Fixing of word wrap, because it goes out of limits then we change size of web-page

--- a/projectarchive/static/projectarchive/css/projectarchive_style.css
+++ b/projectarchive/static/projectarchive/css/projectarchive_style.css
@@ -2,3 +2,6 @@
 	margin-top: -96px !important;
 	position: relative;
 }
+div,h3{
+	word-wrap: break-word;      
+}
